picocuda/src/opto/son/snapshots/picoc__son__parser__parse_arith__lit.snap
---
source: src/son/parser.rs
expression: graph
---
NodeDef(
    RefCell {
        value: Node {
            id: 4,
            opcode: Ret,
            typ: Bot,
            defs: [
                NodeDef(
                    RefCell {
                        value: Node {
                            id: 2,
                            opcode: Start,
                            typ: Bot,
                            defs: [],
                            uses: [
                                NodeUse(
                                    (Weak),
                                ),
                                NodeUse(
                                    (Weak),
                                ),
                            ],
                        },
                    },
                ),
                NodeDef(
                    RefCell {
                        value: Node {
                            id: 3,
                            opcode: Con,
                            typ: Int(
                                8,
                            ),
                            defs: [
                                NodeDef(
                                    RefCell {
                                        value: Node {
                                            id: 2,
                                            opcode: Start,
                                            typ: Bot,
                                            defs: [],
                                            uses: [
                                                NodeUse(
                                                    (Weak),
                                                ),
                                                NodeUse(
                                                    (Weak),
                                                ),
                                            ],
                                        },
                                    },
                                ),
                            ],
                            uses: [
                                NodeUse(
                                    (Weak),
                                ),
                            ],
                        },
                    },
                ),
            ],
            uses: [],
        },
    },
)
